# RetroGSF

./: .copier-answers.yml  .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  tox.ini
app/: app.py  app2.py  applet.py  config.yml
app/.retroGSF/: pyvenv.cfg
data/: PP Plot_Full Data_data.csv  Solvant_properties_with_smile.csv  config_example.yml
docs/source/: conf.py
notebooks/: projet_report.ipynb  testing.ipynb
src/retrogsf/: __init__.py  rank_similar_solvents.py  retrogsf.py  retrogsf_test.py
tests/: conftest.py  test_example_module.py  test_retrogsf.py
