[build-system] 
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "retrogsf"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
description = "Predict and evaluates a solvent for a retrosynthesized reaction (done by AiZynFinder)"
dependencies = [
    "rdkit",
    "numpy<2.0.0",  # Compatible with pandas
    "pandas>=1.5.0,<2.0.0",
    "rxn_insight",
    "google-generativeai>=0.3.0",
    "aizynthfinder>=4.3.0,<4.4.0",
    "python-dotenv",
    "streamlit", 
    "transformers==4.30.0"
]
authors = [
  {name = "Diego Meraldi", email = "diego.meraldi@epfl.ch"},
  {name = "Witek Huguenin-Dezot", email = "witek.huguenin-dezot@epfl.ch"},
  {name = "Lea Lombard"}, {email = "lea.lombard@epfl.ch"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]

[project.urls]
source = "https://github.com/dd-mm17/retrogsf"
tracker = "https://github.com/dd-mm17/retrogsf/issues"

[project.optional-dependencies]
test = [
    "hypothesis",
    "pytest",
    "pytest-cov",
    "tox",
    "genbadge[coverage]",
    "google-generativeai>=0.3.0",
]
doc = [
    "furo",
    "myst-parser",
    "sphinx>=5",
    "sphinx-copybutton",
]

[tool.hatch.version]
path = "src/retrogsf/__init__.py"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
    '__init__.py'
]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
]

[tool.hatch.build.targets.wheel]
packages = ["src/retrogsf"]
include = ["src/retrogsf/data/*.csv"]

[tool.hatch.build.targets.sdist]
include = ["src/retrogsf/data/*.csv"]